--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "start": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "vue-cli-service test:unit"
+    "test": "vue-cli-service test:unit",
+    "server": "forever src/server/",
+    "server:dev": "nodemon --watch src/server src/server/index.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bcrypt": "^3.0.4",
+    "bluebird": "^3.5.3",
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
+    "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "forever": "^0.15.3",
+    "jsonwebtoken": "^8.5.0",
+    "sqlite3": "^4.0.6",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
@@ -24,6 +36,7 @@
     "@vue/test-utils": "^1.0.0-beta.20",
     "chai": "^4.1.2",
     "node-sass": "^4.9.0",
+    "nodemon": "^1.18.10",
     "normalize.css": "^8.0.1",
     "sass-loader": "^7.1.0",
     "typescript": "^3.0.0",
