--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "lint": "vue-cli-service lint",
     "test": "vue-cli-service test:unit",
     "server": "forever src/server/",
-    "server:dev": "nodemon --watch src/server src/server/index.js"
+    "server:dev": "nodemon -w src/server src/server/index.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "bcrypt": "^3.0.4",
-    "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "express": "^4.16.4",
