--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bcrypt": "^3.0.4",
+    "better-sqlite3": "^5.4.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "forever": "^0.15.3",
     "jsonwebtoken": "^8.5.0",
-    "sqlite3": "^4.0.6",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
