--- a/package.json
+++ b/package.json
@@ -20,20 +20,17 @@
     "express-jwt": "^5.3.1",
     "forever": "^0.15.3",
     "jsonwebtoken": "^8.5.1",
+    "sjcl": "^1.0.8",
     "vue": "^2.6.9",
     "vue-class-component": "^7.0.1",
     "vue-property-decorator": "^8.0.0",
     "vue-router": "^3.0.2"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.6",
     "@vue/cli-plugin-babel": "^3.5.1",
     "@vue/cli-plugin-typescript": "^3.5.1",
-    "@vue/cli-plugin-unit-mocha": "^3.5.1",
     "@vue/cli-service": "^3.5.1",
     "@vue/test-utils": "^1.0.0-beta.29",
-    "chai": "^4.2.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
     "normalize.css": "^8.0.1",
