--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-router": "^3.0.2"
   },
   "devDependencies": {
+    "@types/sjcl": "^1.0.28",
     "@vue/cli-plugin-babel": "^3.5.1",
     "@vue/cli-plugin-typescript": "^3.5.1",
     "@vue/cli-service": "^3.5.1",
