--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^3.0.6",
     "better-sqlite3": "^5.4.1",
     "body-parser": "^1.19.0",
+    "clipboard-polyfill": "^2.8.1",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
